--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "jquery": "2.1.4",
     "lodash": "3.10.1",
     "react": "^15.1.0",
@@ -40,4 +41,3 @@
     "yargs": "^4.7.1"
   }
 }
-
